Fixed some bugs, added some sections/subsection

--- a/Combinatorial And Probabilistic Algorithm/root/Combinatorial and Probabilistic Algorithm.tex
+++ b/Combinatorial And Probabilistic Algorithm/root/Combinatorial and Probabilistic Algorithm.tex
@@ -3,5 +3,8 @@
 \begin{document}
     % Title
     \section{Algorithm analysis}
-    \subfile{../sections/simple/Algorithm analysis.tex}
+    \subfile{../sections/simple/Algorithm analysis}
+
+    \section{Search trees}
+    \subfile{../sections/simple/Search trees}
 \end{document}
