--- a/Combinatorial And Probabilistic Algorithm/figures/1 - Binary search tree.tex
+++ b/Combinatorial And Probabilistic Algorithm/figures/1 - Binary search tree.tex
@@ -3,15 +3,11 @@
     \begin{figure}[!hb]
         \centering
         \begin{subfigure}{.45\textwidth}
+            \centering
             \begin{tikzpicture}
             [
-                level distance = 1cm, 
-                sibling distance = 2cm,
-                every node/.style={
-                    draw,
-                    circle,
-                    minimum size = 0.5cm
-                },
+                tree layout,
+                nodes = {draw, circle}
             ]
 
                 \node { 6 }
@@ -19,22 +15,49 @@
                         child {node {2}}
                         child {node {5}}
                     }
-                    child {node {7}
-                        child {node [right] {9}}
+                    child {node {8}
+                        child {node {7}}
+                        child {node {9}}
                     };
             \end{tikzpicture}    
             \caption{}
             \label{Fig:2.a} 
         \end{subfigure}
         \begin{subfigure}{.45\textwidth}
+            \centering
             \begin{tikzpicture}
                 [
+                    tree layout,
+                    nodes = {draw, circle}
                 ]
-                % TODO
+
+                \graph {
+                    6 -> [rpIris] {
+                        5 -> [rpIris] {
+                            2,
+                            5' [as=5]
+                        },
+                        8 -> [rpIris] { 
+                            7,
+                            9
+                        }
+                    },
+
+                    2 -> [bend left, rpFoam] 5,
+                    5' -> [bend right, rpFoam] 5,
+                    7 -> [bend left, rpFoam] 8,
+                    9 -> [bend right, rpFoam] 8,
+                    5 -> [bend left, rpFoam] 6,
+                    8 -> [bend right, rpFoam] 6
+                };
+
             \end{tikzpicture} 
             \caption{}
             \label{Fig:2.b} 
         \end{subfigure}
-        \caption{A simple binary tree, alongside its search tree representation.}
+        \caption{A simple binary tree, alongside its binary tree representation.
+        Here with \textcolor{rpIris}{\rightarrow} we indicate the pointers 
+        to the left and right child, 
+        while with the \textcolor{rpFoam}{\rightarrow} we indicate the pointer to the parent.}
     \end{figure}
 \end{document}
