--- a/Combinatorial And Probabilistic Algorithm/root/Combinatorial and Probabilistic Algorithm.tex
+++ b/Combinatorial And Probabilistic Algorithm/root/Combinatorial and Probabilistic Algorithm.tex
@@ -2,7 +2,7 @@
 \usepackage{subfiles}
 \begin{document}
     % Title
-    \section{Algorithm analysis}
+    \section{Algorithms analysis}
     \subfile{../sections/simple/Algorithm analysis}
 
     \section{Search trees}
