--- a/Information Theory/sections/simple/1 - Basis of IT.tex
+++ b/Information Theory/sections/simple/1 - Basis of IT.tex
@@ -7,6 +7,9 @@
         the latter allows to reduce the amount of space required (in terms of bits)
         without losing information.
 
-    \subsection{Shannon's Entropy.}
+    \subsection{Shannon's Entropy.}\label{Sec:1.1}
     \subfile{../sub/1.1 - Shannon's entropy.tex}
+
+    \subsection{Encoding of a source and Sardinas-Patterson algorithm.}
+    \subfile{../sub/1.2 - Codes and Sardinas-Patterson algorithm.tex}
 \end{document}
