Added prefix-free code section. TODO: ACL and Kraft-McMillan inequality

--- a/Information Theory/sections/simple/1 - Basis of IT.tex
+++ b/Information Theory/sections/simple/1 - Basis of IT.tex
@@ -8,8 +8,8 @@
         without losing information.
 
     \subsection{Shannon's Entropy.}\label{Sec:1.1}
-    \subfile{../sub/1.1 - Shannon's entropy.tex}
+    \subfile{../sub/1.1 - Shannon's entropy}
 
     \subsection{Encoding of a source and Sardinas-Patterson algorithm.}
-    \subfile{../sub/1.2 - Codes and Sardinas-Patterson algorithm.tex}
+    \subfile{../sub/1.2 - Codes and Sardinas-Patterson algorithm}
 \end{document}
