--- a/Information Theory/sections/sub/1.1 - Shannon's Entropy.tex
+++ b/Information Theory/sections/sub/1.1 - Shannon's Entropy.tex
@@ -8,7 +8,7 @@
     In \cite{ShannonEntropy} Shannon analizes various comunication systems:
         from the discrete noiceless one to the continous noisy one.
     A general structure of these systems is shown in \emph{Figure \ref{Fig:1}}.
-    \subfile{../../extra/TikZ/Figure 1 - Source structure.tex}
+    \subfile{../../extra/TikZ/Figure 1 - Source structure}
 
     \begin{itemize}
         \item The \emph{Source} or, more precisely, 
@@ -54,5 +54,5 @@
     }
 
     \subsubsection{Entropy: an axiomatic definition.}\label{Sec:1.1.1}
-    \subfile{../subsub/1.1.1 - Entropy axiomatically defined.tex}
+    \subfile{../subsub/1.1.1 - Entropy axiomatically defined}
 \end{document}
