--- a/Information Theory/sections/sub/1.2 - Codes and Sardinas-Patterson algorithm.tex
+++ b/Information Theory/sections/sub/1.2 - Codes and Sardinas-Patterson algorithm.tex
@@ -24,7 +24,7 @@
 
     \begin{example*}
         Let's consider the code shown below.
-        \subfile{../../extra/TikZ/Example - Non non-singular codes.tex}
+        \subfile{../../extra/TikZ/Example - Non non-singular codes}
         How would we decode the text 000111? 
             We have two possibilities: 
                 either as \(s_{1}s_{1}s_{3}s_{2}\) or as \(s_{1}s_{1}s_{3}s_{4}\).
@@ -36,9 +36,16 @@
     source symbols with a unique codeword. 
     We call such codes \emph{non-singular codes}.
   
-    \subsubsection{\Gls{ud}.}
-    \subfile{../subsub/1.2.1 - UD codes.tex}
+    \subsubsection{\Gls{ud}.}\label{Sec:1.2.1}
+    \subfile{../subsub/1.2.1 - UD codes}
 
     \subsubsection{Sardinas-Patterson algorithm.}
-    \subfile{../subsub/1.2.2 - Sardina-Patterson.tex}
+    \subfile{../subsub/1.2.2 - Sardina-Patterson}
+
+    \subsubsection{Prefix codes.}
+    \subfile{../subsub/1.2.3 - Prefix codes}
+    % TODO
+    % \subsubsection{Average code length.}
+    % \subfile{../subsub/1.2.4 - Average code length}
+    %
 \end{document}
