--- a/Information Theory/sections/subsub/1.2.1 - UD codes.tex
+++ b/Information Theory/sections/subsub/1.2.1 - UD codes.tex
@@ -6,10 +6,10 @@
         making the decode process tedious.
     \begin{example*}
         Let's consider the following codes.
-        \subfile{../../extra/TikZ/Example - Non singular codes.tex}
+        \subfile{../../extra/TikZ/Example - Non singular codes}
         How should we decode the string 000111? 
-        Once again, we have two possibilities:
-            either as \(s_{1}s_{1}s_{3}s_{2}s_{2}\) or as \(s_{1}s_{1}s_{3}s_{4}\).
+        Once again, we have many possibilities:
+            for example \(s_{1}s_{1}s_{3}s_{2}s_{2}\) or \(s_{1}s_{1}s_{3}s_{4}\).
         Additionally, unless contex is given, we don't know which one is correct.
     \end{example*}
     We say that a code is \gls{ud} if and only each sequence of codewords
