--- a/Information Theory/sections/subsub/1.2.2 - Sardina-Patterson.tex
+++ b/Information Theory/sections/subsub/1.2.2 - Sardina-Patterson.tex
@@ -11,7 +11,7 @@
     Hence, a code is non-UD if it happens that a suffix is itself a codeword.
 
     As stated before the algorithm is based on a theorem, given below.
-    \begin{criterion*}
+    \begin{theorem}\label{Thm:1}
         Given \(C\) a code on an alphabet \(\Sigma\), 
             consider the sets \(S_{0}, S_{1}, \ldots\) such that:
             \begin{itemize}
@@ -23,7 +23,7 @@
             \end{itemize}
             then necessary and sufficient condition for \(C\) to be \gls{ud} is that,
             \(\forall n > 0, S_{0} \cap S_{n} = \varnothing\).
-    \end{criterion*}
+    \end{theorem}
     \clearpage
     Therefore, the algorithm has three halt conditions:
     \begin{itemize}
@@ -49,7 +49,7 @@
         From the above steps (summarised in \emph{Table \ref{Tab:1}}), 
             follows that the code is not \gls{ud} since \(S_{0} \cap S_{5} =
             \Set{ab} \ne \varnothing\).
-            \subfile{../../extra/TikZ/Example - Sardinas-Patterson.tex}
+            \subfile{../../extra/TikZ/Example - Sardinas-Patterson}
     \end{example*}
     \begin{exercise}
         Apply the Sardinas-Patterson algorithm to the following codes:
