--- a/Information Theory/main/Information_Theory.tex
+++ b/Information Theory/main/Information_Theory.tex
@@ -3,7 +3,7 @@
 \addbibresource{../extra/Bib/papers.bib}
 \makeglossaries
 \newacronym{ud}{UD}{uniquely decodable codes}
-
+\newacronym{acl}{ACL}{average code length}
 \begin{document}
     \maketitle{Information theory notes}{Riccardo Lo Iacono}{Unipa}
 
