--- a/Information Theory/sections/simple/1 - Basis of IT.tex
+++ b/Information Theory/sections/simple/1 - Basis of IT.tex
@@ -12,4 +12,7 @@
 
     \subsection{Encoding of a source and Sardinas-Patterson algorithm.}
     \subfile{../sub/1.2 - Codes and Sardinas-Patterson algorithm}
+
+    \subsection{Average code length and Kraft inequality}
+    \subfile{../sub/1.3 - Average code length and Kraft-McMillan inequality}
 \end{document}
