Completed section 1. ToDo: syntax and semantic chack

--- a/Information Theory/main/Information_Theory.tex
+++ b/Information Theory/main/Information_Theory.tex
@@ -7,7 +7,7 @@
 \begin{document}
     \maketitle{Information theory notes}{Riccardo Lo Iacono}{Unipa}
 
-    \section{Basis of Information theory.}
+    \section{Basics of information theory}
     \subfile{../sections/simple/1 - Basis of IT}
 
     \clearpage\printbibliography
