--- a/Information Theory/sections/simple/1 - Basics of IT.tex
+++ b/Information Theory/sections/simple/1 - Basics of IT.tex
@@ -7,10 +7,10 @@
         the latter allows to reduce the amount of space required (in terms of bits)
         without losing information.
 
-    \subsection{Shannon's Entropy.}\label{Sec:1.1}
+    \subsection{Shannon's Entropy}\label{Sec:1.1}
     \subfile{../sub/1.1 - Shannon's entropy}
 
-    \subsection{Encoding of a source and Sardinas-Patterson algorithm.}
+    \subsection[Encoding of a source]{Encoding of a source and Sardinas-Patterson algorithm}
     \subfile{../sub/1.2 - Codes and Sardinas-Patterson algorithm}
 
     \subsection{Average code length and Kraft inequality}
