--- a/Information Theory/sections/sub/1.1 - Shannon's Entropy.tex
+++ b/Information Theory/sections/sub/1.1 - Shannon's Entropy.tex
@@ -43,6 +43,8 @@
     \begin{equation}\label{Eq:1}
         H = -K \sum_{i = 1}^{n}{p_{i} \log_{b} p_{i}}.
     \end{equation}
+    where \(K\) is a positive constant and \(b \text{is usually} 2\).
+
     We define \(H(S)\) to be the \emph{entropy} of \(S\). 
     Formally, the entropy measures the average amount of information stored 
         in each symbol of the source output.
@@ -50,9 +52,9 @@
         once the outcome of a given event is known.
     \note{
         In this context, 
-        by event we refer to the symbol produced by the source at a given time.
+        by ``event'' we refer to the symbol produced by the source at a given time.
     }
 
-    \subsubsection{Entropy: an axiomatic definition.}\label{Sec:1.1.1}
+    \subsubsection{Entropy: an axiomatic definition}\label{Sec:1.1.1}
     \subfile{../subsub/1.1.1 - Entropy axiomatically defined}
 \end{document}
