--- a/Information Theory/sections/sub/1.3 - Average code length and Kraft-McMillan inequality.tex
+++ b/Information Theory/sections/sub/1.3 - Average code length and Kraft-McMillan inequality.tex
@@ -2,7 +2,7 @@
 \begin{document}
     In the previous section, we've introduced prefix codes. 
     The question now is, given two distinct prefix-free codes,
-        which one is more convenient to use?
+        which one is more convenient?
         A good choice would be the one that, on average,
         has the shortest length.
 
@@ -33,6 +33,9 @@
         \]
     \end{theorem*}
 
-    \subsubsection{The Kraft-McMillan inequality.}
+    \subsubsection{The Kraft-McMillan inequality}
     \subfile{../subsub/1.3.1 - Kraft-McMillan}
+
+    \subsubsection{Optimal codes and the Shannon-Fano encoding}
+    \subfile{../subsub/1.3.2 - Optimal codes and SF encoding}
 \end{document}
