--- a/Information Theory/sections/subsub/1.1.1 - Entropy axiomatically defined.tex
+++ b/Information Theory/sections/subsub/1.1.1 - Entropy axiomatically defined.tex
@@ -1,7 +1,7 @@
 \documentclass{subfiles}
 \begin{document}
-    In \emph{Section \ref{Sec:1.1}} we said that the only form \(H\) can 
-    assume is the one in \emph{Equation \eqref{Eq:1}}. 
+    In \emph{Section \ref{Sec:1.1}} we stated that the only form \(H\) can 
+    assume is the one of \emph{Equation \eqref{Eq:1}}. 
     The reason behind this, though one may use different approaches 
         (eg. the connection with the entropy in quantum mechanics), 
         is the way entropy is defined axiomatically. 
@@ -58,7 +58,7 @@
                         } + \frac{1}{m} \Entropy[n]{
                             \frac{1}{n}, \ldots, \frac{1}{n}
                         } \\
-                        & \underbrace{ = \ldots = }_{m \Text{times}} \Entropy[nm -nm + m]{
+                        & \underbrace{ = \ldots = }_{m \text{ times}} \Entropy[nm -nm + m]{
                             \frac{1}{m}, \ldots, \frac{1}{m}
                         } + \Entropy[n]{ \frac{1}{n}, \ldots, \frac{1}{n}} \\ 
                     & = A(m) + A(n).
@@ -102,14 +102,14 @@
                         (1 - p) \log_{b} (1 - p) + p \log_{b} p
                     \right\rbrack.
                 \]
-                Also, since \(\Q \Text{is dense in } \R\) and \(H\) is continuos,
+                Also, since \(\Q \text{ is dense in } \R\) and \(H\) is continuos,
                 we can extend what above to any \(p \in \R\).
 
-            \item Lastly, \emph{Equation \eqref{Eq:1}} can be easily proved by 
-                induction on \(n\).
+            \item Lastly, \emph{Equation \eqref{Eq:1}} can be easily proved to hold,
+                by induction on \(n\).
 
         \end{enumerate}
     \end{proof*}
-    The proof we provide is berly a sketch.
+    The proof we provide is berely a sketch.
     See \cite{ShannonEntropy} (\emph{Appendix 2}) for a detailed proof.
 \end{document}
