--- a/Information Theory/sections/sub/1.2 - Codes and Sardinas-Patterson algorithm.tex
+++ b/Information Theory/sections/sub/1.2 - Codes and Sardinas-Patterson algorithm.tex
@@ -2,7 +2,7 @@
     Let's now focus our attention onto the source itself.
     In general, the alphabet these use may not be suitable for transmission,
         for some reason or another.
-    For this particular reason, a \emph{encoder} is used to convert the source alphabet,
+    For this particular reason, an \emph{encoder} is used to convert the source alphabet,
         to a new one, which is more suitable for transmission.
     On the recieving side, a \emph{decoder} is used to convert back to the original alphabet.
     This process is called \emph{source encoding/decoding}.
@@ -13,7 +13,7 @@
         to sequences of symbols in \(X\). 
         A sequence of symbols in \(X\) is called a \emph{codeword}.
 
-    Before we consider specific types of \emph{codes},
+    Before we consider any specific type of \emph{code},
         let us consider the general case. 
     Let's \(C\) be a generic mapping from a source \(S\) to some new alphabet \(X\).
     Since we have not imposed any condition on \(C\), 
@@ -22,10 +22,11 @@
     It easy to observe that, in doing so,
         the decoded message may not be correct or even unique.
 
+
     \begin{example*}
         Let's consider the code shown below.
         \subfile{../../extra/TikZ/Example - Non non-singular codes}
-        How would we decode the text 000111? 
+        How should we decode the text 000111? 
             We have two possibilities: 
                 either as \(s_{1}s_{1}s_{3}s_{2}\) or as \(s_{1}s_{1}s_{3}s_{4}\).
         As said before, the decoded message might not be unique. 
@@ -36,12 +37,12 @@
     source symbols with a unique codeword. 
     We call such codes \emph{non-singular codes}.
   
-    \subsubsection{\Gls{ud}.}\label{Sec:1.2.1}
+    \subsubsection{\Gls{ud}}\label{Sec:1.2.1}
     \subfile{../subsub/1.2.1 - UD codes}
 
-    \subsubsection{Sardinas-Patterson algorithm.}
+    \subsubsection{Sardinas-Patterson algorithm}
     \subfile{../subsub/1.2.2 - Sardina-Patterson}
 
-    \subsubsection{Prefix codes.}
+    \subsubsection{Prefix codes}
     \subfile{../subsub/1.2.3 - Prefix codes}
 \end{document}
