Fixed some typos, reworked section 1. Completed section 2. TODO: overall spellcheck and syntax/semantic check

--- a/Information Theory/extra/Bib/papers.bib
+++ b/Information Theory/extra/Bib/papers.bib
@@ -1,7 +1,16 @@
 @article{ShannonEntropy,
     author = {Claude Shannon},
-    title = {A Mathematical Theory of Communication},
+    title = {A mathematical theory of communication},
     journal = {Bell System Technical Journal},
     year = {1948},
-    volume = {27}
+    volume = {27},
+    pages = {397-423, 623-656}
+}
+
+@article{Huffman,
+    author = {David A. Huffman},
+    title = {A method for the construction of minimum-redundancy codes},
+    journal = {Proceeding of I.R.E.},
+    year = {1952},
+    pages = {1092-1102}
 }
