--- a/Information Theory/main/Information_Theory.tex
+++ b/Information Theory/main/Information_Theory.tex
@@ -8,7 +8,10 @@
     \maketitle{Information theory notes}{Riccardo Lo Iacono}{Unipa}
 
     \section{Basics of information theory}
-    \subfile{../sections/simple/1 - Basis of IT}
+    \subfile{../sections/simple/1 - Basics of IT}
+
+    \section{Huffman encoding}
+    \subfile{../sections/simple/2 - Huffman encoding}
 
     \clearpage\printbibliography
     \clearpage\printglossaries
