--- a/Information Theory/sections/sub/1.1 - Shannon's Entropy.tex
+++ b/Information Theory/sections/sub/1.1 - Shannon's Entropy.tex
@@ -41,9 +41,9 @@
     As we will show in \emph{Section \ref{Sec:1.1.1}}, 
         the only form \(H\) can assume is the following:
     \begin{equation}\label{Eq:1}
-        H = -K \sum_{i = 1}^{n}{p_{i} \log_{b} p_{i}}.
+        H = -K \sum_{i = 1}^{n = \Abs{\Sigma}}{p_{i} \log_{b} p_{i}}.
     \end{equation}
-    where \(K\) is a positive constant and \(b \text{is usually} 2\).
+    where \(K\) is a positive constant and \(b \text{ is usually } 2\).
 
     We define \(H(S)\) to be the \emph{entropy} of \(S\). 
     Formally, the entropy measures the average amount of information stored 
