--- a/Information Theory/sections/sub/1.3 - Average code length and Kraft-McMillan inequality.tex
+++ b/Information Theory/sections/sub/1.3 - Average code length and Kraft-McMillan inequality.tex
@@ -14,7 +14,7 @@
         be the probabilities for the source symbols. 
             Then, we define the quantity
             \[
-                L_{S}(C) = \sum_{i = 1}^{m}{p_{i} l_{i}}
+                L_{S}(C) = \sum_{i = 1}^{n}{p_{i} l_{i}}
             \]
             as the average code length of the code \(C\).
     \end{definition*}
