--- a/Information Theory/sections/subsub/1.3.1 - Kraft-McMillan.tex
+++ b/Information Theory/sections/subsub/1.3.1 - Kraft-McMillan.tex
@@ -7,12 +7,12 @@
     \begin{theorem}[Kraft-McMillan]\label{Thm:2}
         Let us consider a source alphabet \(S = \Set{s_{1}, \ldots, s_{n}}\)
         and a code alphabet \(X =\Set{x_{1}, \ldots, x_{d}}\).
-        Let \(l_{1}, \ldots, l_{m}\) be a set of lengths.
+        Let \(l_{1}, \ldots, l_{n}\) be a set of lengths.
         Then necessary and sufficient condition for the existence of a 
         prefix-free code \(C\) over the alphabet \(X\) with codewords lenghts 
-        \(l_{1}, \ldots, l_{m}\) is that 
+        \(l_{1}, \ldots, l_{n}\) is that 
         \[
-            \sum_{i = 1}^{m}{d^{-l_{i}}} \le 1
+            \sum_{i = 1}^{n}{d^{-l_{i}}} \le 1
         \]
         with \(d\) size of the code alphabet.
     \end{theorem}
