Added exercises to section 2.

--- a/Information Theory/main/Information_Theory.tex
+++ b/Information Theory/main/Information_Theory.tex
@@ -13,6 +13,9 @@
     \section{Huffman encoding}
     \subfile{../sections/simple/2 - Huffman encoding}
 
+    % ToDo:
+    % \section{Arithmetic encoding}
+    % \subfile{../sections/simple/3 - Arithmetic encoding}
     \clearpage\printbibliography
     \clearpage\printglossaries
 \end{document}
