--- a/Information Theory/sections/simple/2 - Huffman encoding.tex
+++ b/Information Theory/sections/simple/2 - Huffman encoding.tex
@@ -26,4 +26,7 @@
 
         \subsection{The algorithm}
         \subfile{../sub/2.1 - HE the algorithm}
+
+        \subsection{Exercises}
+        \subfile{../sub/2.2 - Huffman exercises}
 \end{document}
