Section 2 actually completed: added Canonical and Adaptive Huffman

--- a/Information Theory/sections/simple/2 - Huffman encoding.tex
+++ b/Information Theory/sections/simple/2 - Huffman encoding.tex
@@ -27,6 +27,6 @@
         \subsection{The algorithm}
         \subfile{../sub/2.1 - HE the algorithm}
 
-        \subsection{Exercises}
-        \subfile{../sub/2.2 - Huffman exercises}
+        \subsection{Canonical Huffman}
+        \subfile{../sub/2.2 - Canonical Huffman}
 \end{document}
