--- a/Information Theory/sections/sub/2.1 - HE the algorithm.tex
+++ b/Information Theory/sections/sub/2.1 - HE the algorithm.tex
@@ -33,4 +33,10 @@
 
     \subsubsection{The decoding}
     \subfile{../subsub/2.1.2 - Huffman decoding}
+
+    \subsubsection{Exercises}
+    \subfile{../subsub/2.1.3 - Huffman exercises}
+
+    \subsubsection{Adaptive Huffman}
+    \subfile{../subsub/2.1.4 - Adaptive Huffman}
 \end{document}
