--- a/Information Theory/main/Information_Theory.tex
+++ b/Information Theory/main/Information_Theory.tex
@@ -4,6 +4,7 @@
 \makeglossaries
 \newacronym{ud}{UD}{uniquely decodable codes}
 \newacronym{acl}{ACL}{average code length}
+\newacronym{ac}{AC}{aritmethic coding}
 \begin{document}
     \maketitle{Information theory notes}{Riccardo Lo Iacono}{Unipa}
 
@@ -13,6 +14,8 @@
     \section{Huffman encoding}
     \subfile{../sections/simple/2 - Huffman encoding}
 
+    \section{Aritmethic coding}
+    \subfile{../sections/simple/3 - Aritmethic coding}
     \clearpage\printbibliography
     \clearpage\printglossaries
 \end{document}
