--- a/Information Theory/sections/subsub/2.2.3 - Canonical Huffman exercises.tex
+++ b/Information Theory/sections/subsub/2.2.3 - Canonical Huffman exercises.tex
@@ -4,6 +4,6 @@
         Apply the canonical Huffman encoding to the codes obtained in \emph{Exercise \ref{Exe:1}}.
     \end{exercise}
     \begin{exercise}
-        Rewrite the procedure to construct the \lstinline{fc} using a forward approach.
+        Rewrite the procedure to construct the \lstinline{fc} array using a forward approach.
     \end{exercise}
 \end{document}
